--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "server-only": "node server-only.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.13.2",
     "cookie-parser": "^1.3.5",
+    "dotenv": "^6.2.0",
     "eventsource": "^0.1.6",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
+    "nodemon": "^1.18.10",
     "openurl": "^1.1.0",
     "passport": "^0.2.2",
     "passport-nest": "^1.0.0"
