--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node server-client.js",
+    "start": "nodemon server-only.js",
     "server-client": "node server-client.js",
     "server-only": "node server-only.js"
   },
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.13.2",
     "cookie-parser": "^1.3.5",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "eventsource": "^0.1.6",
     "express": "^4.13.1",
