--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^1.18.10",
     "openurl": "^1.1.0",
     "passport": "^0.2.2",
-    "passport-nest": "^1.0.0"
+    "passport-nest": "^1.0.0",
+    "socket.io": "^2.2.0"
   }
 }
