--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "server-only": "node server-only.js"
   },
   "dependencies": {
+    "aws-iot-device-sdk": "^2.2.1",
     "axios": "^0.18.0",
     "body-parser": "^1.13.2",
     "cookie-parser": "^1.3.5",
