--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon server-only.js",
+    "start": "node server-only.js",
     "server-client": "node server-client.js",
     "server-only": "node server-only.js"
   },
   "dependencies": {
-    "aws-iot-device-sdk": "^2.2.1",
+    "aws-sdk": "^2.411.0",
     "axios": "^0.18.0",
     "body-parser": "^1.13.2",
     "cookie-parser": "^1.3.5",
