--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ NEST_SECRET=
 PORT=4000
 AWS_CLIENT_ID=
 AWS_SECRET_CLIENT_KEY=
+REDIS_URL=
+SESSIOM_SECRET_KEY=
+LAMBDA_AUTH_URL=
+NEST_ACCESS_TOKEN=
